# SpaTex---Spatial-To-Text-data-toolkit

./: .gitignore  CMakeLists.txt  README.md  datasets.ini  main.cpp  merge_entity_texts.py  run.sh  run_all.sh
include/: config.h  containers.h  def.h  parse.h  utils.h
include/index/: create.h  filter.h  refinement.h
src/: config.cpp  containers.cpp  def.cpp  parse.cpp  utils.cpp
src/index/: create.cpp  filter.cpp  refinement.cpp
